Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.07.2022 09:10:44</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.07.2022 09:36:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,42 @@
 <h5>Čtvrtek, 21. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová</strong>
+<strong>Zelná s klobásou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stehno na divoko s rýží NEBO těstovinou</strong>
+<strong>Smažený sýr s kroketami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Pečený pstruh na másle a šalvěji s dušenou karotkou a pečeným bramborem</strong>
+<strong>Asijský zelný salát s kuřecím masem a chilli</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							159,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Selský salát s pečeným bramborem, uzeným masem a vejcem</strong>
+<strong>Grilovaná jitrnička NEBO jelítko s kysaným zelím, hořčicí a vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: Mahi mahi s krémovou karotkou a tymiánem, Smetanové brambory, rýže, zelenina, kuřecí špalíčky</strong>
+<strong>TEPLÝ BUFET: Pečená žebra, Mahi mahi zapečená slaninou, žampiony a chilli, brambory, zelenina, rýže,</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Saláty: rajčatový, celerovo mrkvový</strong>
+<strong>SALÁTY: rajčatový s vejcem a uzeným masem, celerovo-mrkvový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
