--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.07.2022 09:12:42</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.07.2022 09:37:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,31 +7,24 @@
 <h5>Pátek, 22. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zelná s klobásou</strong>
+<strong>Cizrnová s koriandrem a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený sýr s kroketami a tatarkou</strong>
+<strong>Vepřová plec na česneku s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Asijský zelný salát s kuřecím masem a chilli</strong>
+<strong>Skořicové lívance s lesním ovocem a jogurtem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Grilovaná jitrnička NEBO jelítko s kysaným zelím, hořčicí a vařeným bramborem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							137,-
+							115,-
 						</span>
 </p>
 <p>
@@ -42,7 +35,7 @@
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový s vejcem a uzeným masem, celerovo-mrkvový</strong>
+<strong>SALÁTY: Míchaný s chilli dresinkem, Caesar</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
