--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.07.2022 08:15:53</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.07.2022 08:47:56</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pondělí, 25. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cizrnová s koriandrem a kuřecím masem</strong>
+<strong>Květáková s kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na česneku s rýží</strong>
+<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Skořicové lívance s lesním ovocem a jogurtem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							115,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Pečená žebra, Mahi mahi zapečená slaninou, žampiony a chilli, brambory, zelenina, rýže,</strong>
+<strong>TEPLÝ BUFET: Okouník s petrželkou a hlívou, pečené kuřecí kousky, rýže, baby mrkev, pečené brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Míchaný s chilli dresinkem, Caesar</strong>
+<strong>SALÁTY: šopský, tlačenkový, zelný s cesnekovým dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 25.7.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Karamelový cheesecake</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, višněmi a drobenkou </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hrachová polévka v menu  <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hrachová polévka samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Grilované kuřecí prso v kari omáčce, jasmínová rýže, čerstvá zelenina, koriandr <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hovězí ragú na řecký způsob s olivami, restovaný bulgur, kerblík <em title="Obiloviny obsahující lepek">1</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Cizrnový salát s pečenou zeleninou, bylinkami a balkánským sýrem <em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
