--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.07.2022 08:47:56</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.07.2022 09:11:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-None
+<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, recky bulgurovy salat s cerstvou letni zeleninou, citrony a zelenymi bylinkami {L} 149</li><li>Smazeny filet z cersve tmave tresky s omackou z pecenych paprik, recky bulgurovy salat s cerstvou letni zeleninou, citrony a zelenymi bylinkami {L} 175</li><li>Thajske massaman kari s veprovym masem, pecenou dyni, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Grilovane kotletky z kraliciho hrbetu se susenymi rajcaty, olivami a bazalkou, pecene brambory, salatek 179</li><li>Indicke zeleninove birjany z basmati ryze, sazene vejce, jogurtovy dip, salatek 149 </li></ol>
 </td>
 </tr>
 </table>
