--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.07.2022 09:11:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 26.07.2022 09:36:20</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -79,6 +79,11 @@
 <div class="cena">69 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Náš degustační box</div>
+<div class="cena">400 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Pikantní květákový krém, petrželka; v menu <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
@@ -137,7 +142,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlanticke makrely zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Grilovany libanonsky kruti kebab, pecene brambory s pecenou zeleninou, jogurtovy dip, salatek 155</li><li>Rostbif z hoveziho orechu s pikantnim avokadovym guacamole, bulgurovy salat se zeleninou a bylinkami, salatek {L} 179</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze, jogurtovy dip, salatek 155</li></ol>
+<ol><li>Filet z atlanticke makrely zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 179</li><li>Grilovany libanonsky kruti kebab, pecene brambory s pecenou zeleninou, jogurtovy dip, salatek 155</li><li>Rostbif z hoveziho orechu s pikantnim avokadovym guacamole, bulgurovy salat se zeleninou a bylinkami, salatek {L} 179</li><li>Pecene papriky a cukety zapecene s bylinkami a goudou, korenena ryze, jogurtovy dip 155</li></ol>
 </td>
 </tr>
 </table>
