Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.07.2022 09:12:05</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.07.2022 09:38:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -28,24 +28,24 @@
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s restovanou slaninkou, čedarem a bagetkou</strong>
+<strong>Quiche lorraine na ledovém salátku se zeleninou a dijonským dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Okouník s krémovou cibulkou a olivami, kuřecí nudličky ve sladkokyselé omáčce s chilli, zelenina, rýže, pečené brambory</strong>
+<strong>TEPLÝ BUFET: vepřové kolínko tandoori, pečené brambory s bylinkami, Tilapie s rajčaty a parmazánem, rýže, krémový květáček</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Šopák, okurkový s chilli dresinkem, tlačenkový</strong>
+<strong>SALÁTY: míchaná zelenina, zeleninový s kari dresinkem a balkánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							45,-
+							40,-
 						</span>
 </p>
 </div>
